--- a/ExampleMenuBundle/composer.json
+++ b/ExampleMenuBundle/composer.json
@@ -6,8 +6,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Włodzimierz Gajda",
-            "email": "gajdaw@gajdaw.pl"
+            "name": "Przemysław Waszkis",
+            "email": "pwaszkis@ioki.com.pl"
         }
     ],
     "require": {
